# UBB-Computer-Science-Coursework

./: README.md
Sem 2/OOP/LAB10QT/: CMakeLists.txt  main.cpp
Sem 2/OOP/LAB12QT/: CMakeLists.txt  main.cpp
Sem 2/OOP/LAB12QT/UI/: DialogAdaugaCos.cpp  DialogAdaugaCos.h  UI.cpp  UI.h  UIGenerare.h  UiCos.cpp  UiCos.h  UiCosReadOnly.cpp  UiCosReadOnly.h  UiExport.cpp  WindowAfisare.cpp
Sem 2/OOP/LAB12QT/entities/: medicament.cpp  reteta.cpp  reteta.h
Sem 2/OOP/LAB12QT/exceptions/: exceptions.cpp
Sem 2/OOP/LAB12QT/repository/: repo.cpp
Sem 2/OOP/LAB12QT/services/: service_statistics.h
Sem 2/OOP/LAB12QT/tests/: test_repo.cpp  test_repo.h  test_reteta.cpp  test_service_statistics.h  test_validateInput.h  test_validatorMedicament.h
Sem 2/OOP/LAB13QT/: CMakeLists.txt
Sem 2/OOP/Lab11Qt/: CMakeLists.txt  fisier_test.csv  main.cpp  t.csv  test.csv
Sem 2/OOP/Lab11Qt/UI/: DialogFiltrare.cpp  DialogFiltrare.h  DialogModify.cpp  DialogModify.h  UI.cpp  UI.h  UiCos.cpp  UiCos.h  UiExport.h  WindowAfisare.h
Sem 2/OOP/Lab11Qt/entities/: medicament_validator.cpp  reteta.cpp
Sem 2/OOP/Lab11Qt/exceptions/: exceptions.h
Sem 2/OOP/Lab11Qt/services/: service_reteta.h
Sem 2/OOP/Lab11Qt/tests/: test_entitate.cpp  test_serviceReteta.h  test_service_statistics.cpp  test_validatorMedicament.cpp
Sem 2/OOP/lab01/: CMakeLists.txt  main  main.c
Sem 2/OOP/lab01_pb10/: CMakeLists.txt  main.c
Sem 2/OOP/lab02/: CMakeLists.txt  main.c
Sem 2/OOP/lab02/entities/HEADERS/: entities.h  validator.h
Sem 2/OOP/lab02/entities/SOURCE_FILES/: entities.c  validator.c
Sem 2/OOP/lab02/repository/HEADERS/: repo.h
Sem 2/OOP/lab02/repository/SOURCE_FILES/: repo.c
Sem 2/OOP/lab02/service/HEADERS/: service.h
Sem 2/OOP/lab02/service/SOURCE_FILES/: service.c
Sem 2/OOP/lab02/tests/HEADERS/: test_entity.h  test_validator.h
Sem 2/OOP/lab02/tests/SOURCE_FILES/: test_entity.c  test_validator.c
Sem 2/OOP/lab02/ui/: ui.c  ui.h
Sem 2/OOP/lab03/: CMakeLists.txt  main.c
Sem 2/OOP/lab03/entities/HEADERS/: entities.h  validator.h
Sem 2/OOP/lab03/entities/SOURCES/: entities.c  validator.c
Sem 2/OOP/lab03/repository/HEADERS/: repo.h
Sem 2/OOP/lab03/repository/SOURCES/: repo.c
Sem 2/OOP/lab03/service/HEADERS/: service.h  service_statistici.h  validator_input.h
Sem 2/OOP/lab03/service/SOURCES/: service.c  service_statistici.c  validator_input.c
Sem 2/OOP/lab03/tests/HEADERS/: test_all.h  test_entity.h  test_repo.h  test_service.h  test_service_statistici.h  test_validator.h  test_validator_input.h
Sem 2/OOP/lab03/tests/SOURCES/: test_all.c  test_entity.c  test_repo.c  test_service.c  test_service_statistici.c  test_validator.c  test_validator_input.c
Sem 2/OOP/lab03/ui/HEADERS/: ui.h
Sem 2/OOP/lab03/ui/SOURCES/: ui.c
Sem 2/OOP/lab6-7/: CMakeLists.txt  main.cpp  vectordinamic.h
Sem 2/OOP/lab6-7/entities/: medicament.h  medicament.puml
Sem 2/OOP/lab6-7/exceptions/: exceptions.cpp  exceptions.h
Sem 2/OOP/lab6-7/repository/: repo.cpp  repo.h  reteta.cpp  reteta.h
Sem 2/OOP/lab6-7/services/: service_crud.cpp  service_crud.h  service_reteta.cpp  service_reteta.h
Sem 2/OOP/lab6-7/tests/: test_all.cpp  test_all.h  test_entitate.cpp  test_repo.cpp  test_reteta.cpp  test_reteta.h  test_serviceCRUD.cpp  test_serviceReteta.cpp
Sem 2/OOP/lab6-7/ui/: ui.cpp  ui.h  ui_principal.cpp  ui_principal.h  ui_reteta.cpp  ui_reteta.h
Sem 2/OOP/lab9/: CMakeLists.txt  main.cpp
Sem 3/BD/Lab1/: Lab1.sql
Sem 3/BD/Lab2/: Lab2Insert.sql  Lab2Select.sql
Sem 3/BD/Lab3/: Lab3_1.sql  Lab3_10.sql  Lab3_2.sql  Lab3_3.sql  Lab3_4.sql  Lab3_5.sql  Lab3_6.sql  Lab3_7.sql  Lab3_8.sql  Lab3_9.sql  Labmain.sql
Sem 3/BD/Lab4/: Lab4.sql  Lab4Views.sql  Lab4_1.sql  Lab4_2.sql  Lab4_final.sql  SQLQuery4.sql  SQL_generare.sql
Sem 3/BD/Lab6/: lab6_1.sql  lab6_2.sql  lab6_3.sql  lab6_4.sql
Sem 3/PLF/LAB1/: LAB1.txt  main.py
Sem 3/PLF/LAB1TEMA/: lab1.pl  lab1.pl~  lab1_2.pl  lab1_2.pl~
Sem 3/PLF/LAB2TEMA/: lab21.pl  lab21.pl~  lab22.pl
Sem 3/PLF/LAB3TEMA/: lab3.pl  lab3.pl~
Sem 3/PLF/Lisp/: lab11.lsp  lab12.lsp  lab13.lsp  lab14.lsp  lab2.lsp  lab3.lsp
Sem 4/SGBD/Laborator1/: Laborator1.sln
Sem 4/SGBD/Laborator2/: Laborator2.sln
Sem 4/SGBD/Laborator3/: SGBD_LAB_3.sql
Sem 4/SGBD/LaboratorDeadlock4/: DEADLOCK1.sql  DEADLOCK2.sql  DirtyReads1.sql  DirtyReads2.sql  LaboratorDeadlock4.sln  NonRepeatableReads.sql  NonRepeatableReads2.sql  PhantomReads1.sql  PhantomReads2.sql
Sem 5/LFTC/Lab1/: Programe_2_3.txt  limbajul_meu.txt
Sem 5/LFTC/Lab2/: identifier.py  test1.mlp  test1_eroare.mlp  test2.mlp  test4.mlp  test5.mlp
Sem 5/LFTC/Lab3/: fip.txt  lexical_analyser.py  test1.mlp  test2.mlp  test3.mlp
Sem 5/LFTC/Lab3_InClass/: fip.txt  lex.yy.c  lexer.lxi  program  test.mpi  tsc.txt  tsi.txt
Sem 5/LFTC/Lab4/: af.py  af_clasa.txt  af_integers_c_plus_plus.txt  format.txt  main.py
Sem 5/LFTC/Lab4_InClass/: lex.yy.c  lexer.lxi  parser.tab.c  parser.tab.h  parser.y  program  test.txt
Sem 5/LFTC/Lab4_vechi/: lex.yy.c  lexerl.lxi  parser  parser.tab.c  parser.tab.h  parser.y  script.sh  test.mpi
Sem 5/LFTC/Lab5/: s.py  slr2.py  slr_1.py
Sem 5/LFTC/Lab5_InClass/: format_input.txt  input.txt  main.py
Sem 5/LFTC/Lab5_vechi/: af.py  lexical_analyser.py
Sem 5/LFTC/Lab6/: codeASM.h  lex.yy.c  lexerl.lxi  output.asm  parser  parser.tab.c  parser.tab.h  parser.y  script.sh  test.mpi
Sem 5/PPD/Lab3/Lab3/: CMakeLists.txt  Output.txt  main.cpp
Sem 5/PPD/Lab3/Lab3_Tema/Tema/: CMakeLists.txt  Tema_var1  Tema_var2  varianta1.cpp  varianta2.cpp  varianta3.cpp
Sem 5/PPD/Lab3/Lab3_Tema/Tema/resources/: 100000_n2.txt  1000_n1.txt  1000_n2.txt  100_n1.txt  16_n1.txt  16_n2.txt  18_n1.txt
Sem 6/Calcul Numeric/Lab1/: lab_1_10_1.m  lab_1_11_1.m  lab_1_4_1.m  lab_1_5_1.m  lab_1_6_1.m  lab_1_7_1.m  lab_1_8_1.m  lab_1_9_1.m
Sem 6/Calcul Numeric/Lab10/: pb1.m  pb2.m  pb3.m  pb4.m  pb5.m  pb6.m  pb7.m
Sem 6/Calcul Numeric/Lab11/: pb1.m  pb2.m  pb3.m  pb4.m  pb5.m  pb6.m  pb7.m
Sem 6/Calcul Numeric/Lab12/: pb1.m  pb2.m  pb3.m  pb4.m  pb5.m  pb6.m  pb7.m  pb8.m
Sem 6/Calcul Numeric/Lab2/: pb1.m  (+3 more)
(+327 files in other folders)
